fix header spacing

--- a/src/sass/main-header.scss
+++ b/src/sass/main-header.scss
@@ -8,6 +8,7 @@
 
 	&__h1 {
 		font-size: inherit;
+		display: inline;
 	}
 
 	&__title {
